# Avalanche

./: .gitignore  .gitmodules  Avalanche.sln  CMakeLists.txt  README.md
Avalanche/: Avalanche.vcxproj  Avalanche.vcxproj.filters  CMakeLists.txt
Avalanche/src/: Avalanche.h  avlpch.cpp  avlpch.h
Avalanche/src/Avalanche/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Avalanche/src/Avalanche/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.cpp  Window.h
Avalanche/src/Avalanche/Events/: Event.h  EventApplication.h  EventBus.cpp  EventBus.h  EventDispatcher.cpp  EventDispatcher.h  EventKeyboard.h  EventMouse.h
Avalanche/src/Avalanche/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Avalanche/src/Avalanche/Utils/: Color.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/assets/shaders/: fragment.glsl  vertex.glsl
Sandbox/src/: SandboxApp.cpp
